added surefire plugin